css/style.css
/* Load fonts */
@import url('https://fonts.googleapis.com/css2?family=Fraunces:opsz,wght@9..144,700&family=Montserrat:wght@500;700&display=swap');

/*CSS custom properties*/
:root {
    --dark-cyan: hsl(158, 36%, 37%);
    --darker-cyan: hsl(158, 36%, 20%);
    --cream: hsl(30, 38%, 92%);
    --very-dark-blue: hsl(212, 21%, 14%);
    --dark-grayish-blue: hsl(228, 12%, 48%);
    --white: hsl(0, 0%, 100%);

    --font-family-Fraunces: 'Fraunces', serif;
    --font-family-Montserrat: 'Montserrat', sans-serif;
    --font-size: 14px;
    --font-normal: 500;
    --font-bold: 700;
}

h1, h2, h3, h4, h5, h6,
p, div {
    margin: 0;
    padding: 0;
    font-size: 100%;
}

body {
    margin: 0;
    background-color: var(--cream);
    min-height: 100vh;
    display: flex;
    flex-direction: column;
    justify-content: center;
}

.product-preview {
    background-color: var(--white);
    box-sizing: border-box;
    max-width: 340px;
    margin: 0px auto;
    padding: 0;
    align-self: center;
    -webkit-border-radius: 10px;
    border-radius: 10px;
    font: var(--font-normal) var(--font-size) var(--font-family-Montserrat);
    color: var(--dark-grayish-blue);
    
}

.product-preview .product-img img {
    display: block;
    width: 100%;
    -webkit-border-radius: 10px 10px 0 0;
    border-radius: 10px 10px 0 0;
}

.product-preview .product-info {
    padding: 24px;
}

.product-preview .sub-header {
    text-transform: uppercase;
    font: var(--font-normal) 85% var(--font-family-Montserrat);
    letter-spacing: 5px;
    margin-bottom: 15px;
}

.product-preview .header {
    font: var(--font-bold) 227% / 1em var(--font-family-Fraunces);
    color: var(--very-dark-blue);
    margin-bottom: 17px;
}

.product-preview .desctiption {
    text-align: left;
    margin-bottom: 25px;
    line-height: 1.6em;
}

.product-preview .price {
    margin-bottom: 20px;
}
.product-preview .new-price {
    display: inline-block;
    margin-right: 15px;
    font: var(--font-bold) 227% / 1em var(--font-family-Fraunces);
    color: var(--dark-cyan);
}
.product-preview .old-price {
    font-size: 90%;
    text-decoration: line-through;
    position: relative;
    top: -7px;
}
.product-preview .button {
    display: block;
    background-color: var(--dark-cyan);
    font-weight: var(--font-bold);
    color: var(--white);
    text-align: center;
    text-decoration: none;
    padding: 13px 10px 17px;
    line-height: 1em;
    -webkit-border-radius: 8px;
    border-radius: 8px;
    transition: background-color 0.5s ease-out;
}

.product-preview .button::before {
    content: url('../images/icon-cart.svg');
    display: inline-block;
    margin-right: 12px;
    position: relative;
    top: 3px;
}
.product-preview .button:hover { 
    background-color: var(--darker-cyan);
}

/* styles for desctop */
@media only screen and (min-width: 700px) {
    .product-preview {
        max-width: 600px;
        display: flex;
        flex-direction: row;
    }
    .product-preview .product-img img {
        width: 300px;
        -webkit-border-radius: 10px 0 0 10px;
        border-radius: 10px 0 0 10px;
    }
    .product-preview .product-info {
        padding: 30px;
        display: flex;
        flex-direction: column;
        justify-content: space-between;
    }
    .product-preview .sub-header,
    .product-preview .header,
    .product-preview .desctiption,
    .product-preview .price {
        margin-bottom: 0;
    }
}

